[package]
name = "print_duration"
version = "1.0.0"
authors = ["Jonathan <jonthanwoollettlight@gmail.com>"]
edition = "2018"
description = "Simple library to print durations."
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

repository = "https://github.com/JonathanWoollett-Light/print_duration"
documentation = "https://docs.rs/print_duration/"
readme = "README.md"

[dependencies]